tests/ui/no-impl.stderr
error[E0599]: the method `eyre_kind` exists for reference `&Error`, but its trait bounds were not satisfied
 --> $DIR/no-impl.rs:7:13
  |
4 | struct Error;
  | -------------
  | |
  | doesn't satisfy `Error: Into<Report>`
  | doesn't satisfy `Error: eyre::private::kind::TraitKind`
  | doesn't satisfy `Error: std::fmt::Display`
...
7 |     let _ = eyre!(Error);
  |             ^^^^^^^^^^^^ method cannot be called on `&Error` due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `Error: Into<Report>`
          which is required by `Error: eyre::private::kind::TraitKind`
          `Error: std::fmt::Display`
          which is required by `&Error: eyre::private::kind::AdhocKind`
          `&Error: Into<Report>`
          which is required by `&Error: eyre::private::kind::TraitKind`
  = note: this error originates in the macro `eyre` (in Nightly builds, run with -Z macro-backtrace for more info)
